--- a/Loading/Assembly-CSharp-vs.csproj
+++ b/Loading/Assembly-CSharp-vs.csproj
@@ -46,6 +46,9 @@
 	</Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\Scripts\EndPoint.cs" />
+     <Compile Include="Assets\Scripts\EnemyInteraction.cs" />
+     <Compile Include="Assets\Scripts\GameController.cs" />
      <Compile Include="Assets\Scripts\PlayerMovement.cs" />
      <Compile Include="Assets\ShowSkin.cs" />
      <None Include="Assets\Standard Assets\Particles\Sources\Shaders\Particle Alpha Blend (Queue +100).shader" />
